# groovekit

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md
Resources/jive/: drum_sampler.layout.xml  drum_sampler.styles.json
apps/GrooveKit/: CMakeLists.txt  main.cpp
cmake/: JUCEPath.cmake
src/: MainComponent.cpp  MainComponent.h  main.cpp
src/AppEngine/: AppEngine.cpp  AppEngine.h  CMakeLists.txt  GrooveKitUIBehaviour.h  MidiListener.cpp  MidiListener.h  MidiRecorder.cpp  MidiRecorder.h  TrackManager.cpp  TrackManager.h  ValidationUtils.h
src/AudioEngine/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  EngineHelpers.h
src/DatabaseManager/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h
src/DrumSamplerEngine/: DefaultSampleLibrary.h  DrumSamplerEngineAdapter.cpp  DrumSamplerEngineAdapter.h
src/MIDIEngine/: CMakeLists.txt  MIDIEngine.cpp  MIDIEngine.h
src/PluginManager/: CMakeLists.txt  PluginEditorWindow.cpp  PluginEditorWindow.h  PluginManager.cpp  PluginManager.h
src/UI/: CMakeLists.txt  MainComponent.cpp  MainComponent.h  TestComponent.h  TrackView.cpp  TrackView.h
src/UI/DrumSamplerView/: DefaultSampleLibrary.cpp  DrumPadComponent.h  DrumSamplerComponent.h  DrumSamplerEngine.h  DrumSamplerLauncher.cpp  DrumSamplerLauncher.h  DrumSamplerView.cpp  DrumSamplerView.h  SampleLibraryComponent.h
src/UI/InstrumentTutorial/: InstrumentTutorial.cpp  InstrumentTutorial.h
src/UI/MainViews/: AppView.cpp  AppView.h  TrackView.cpp  TrackView.h  WelcomeView.cpp  WelcomeView.h
src/UI/MenuBar/: GrooveKitMenuBar.cpp  GrooveKitMenuBar.h
src/UI/MixView/: MixView.cpp  MixView.h  MixerPanel.cpp  MixerPanel.h
src/UI/MixView/ChannelComponents/: ChannelStrip.cpp  ChannelStrip.h
src/UI/MixView/ChannelComponents/ChannelStripComponents/: FaderComponent.h
src/UI/Plugins/: FourOscGUI.cpp
src/UI/Plugins/FourOsc/: FourOscGUI.cpp  FourOscGUI.h
src/UI/Plugins/Synthesizer/: MorphLookAndFeel.h  MorphSynthPlugin.cpp  MorphSynthPlugin.h  MorphSynthWindow.h
src/UI/PopupWindows/: PianoRollWindow.cpp  PianoRollWindow.h
src/UI/PopupWindows/MidiInputDevice/: MidiInputDeviceWindow.cpp
src/UI/PopupWindows/OutputDevice/: OutputDeviceWindow.cpp  OutputDeviceWindow.h
src/UI/PopupWindows/PianoRollComponents/: GridControlPanel.cpp  GridControlPanel.h  GridStyleSheet.cpp  GridStyleSheet.h  KeyboardComponent.cpp  KeyboardComponent.h  NoteComponent.cpp  NoteComponent.h  NoteGridComponent.cpp  NoteGridComponent.h  NoteModel.cpp  NoteModel.h  PConstants.h  PianoRoll.cpp  PianoRoll.h  PianoRollEditor.cpp  PianoRollEditor.h  PianoRollMainComponent.cpp  PianoRollMainComponent.h  TimelineComponent.cpp  TimelineComponent.h
src/UI/Settings/: AudioSettingsPanel.cpp  AudioSettingsPanel.h  MidiSettingsPanel.cpp  MidiSettingsPanel.h  SettingsDialog.h
src/UI/TrackEditViewTutorial/: TrackEditViewTutorial.cpp  TrackEditViewTutorial.h
src/UI/TrackView/: EditComponent.h  ExportOverlayComponent.h  GhostClipComponent.cpp  GhostClipComponent.h  LoopRangeComponent.cpp  LoopRangeComponent.h  MidiListener.cpp  MidiListener.h  PlayheadComponent.cpp  PlayheadComponent.h  TimelineComponent.cpp  TimelineComponent.h  TrackClip.cpp  TrackClip.h  TrackComponent.cpp  TrackComponent.h  TrackEditView.cpp  TrackEditView.h  TrackHeader.cpp  TrackHeaderComponent.cpp  TrackHeaderComponent.h  TrackListComponent.cpp  TrackListComponent.h  TrackView.cpp  TrackView.h
src/UI/TrackView-Tutorial/: TrackViewTut.cpp  TrackViewTut.h
src/UI/TrackView-UI/: EditComponent.cpp  EditComponent.h  PlayheadComponent.cpp  TrackClip.cpp  TrackClip.h  TrackComponent.cpp  TrackComponent.h  TrackEditView.cpp  TrackEditView.h  TrackHeader.cpp  TrackHeader.h  TrackHeaderComponent.cpp  TrackHeaderComponent.h  TrackListComponent.cpp  TrackListComponent.h  TrackView.cpp  TrackView.h
src/UI/Trackview-Components/: TrackComponent.cpp  TrackComponent.h
src/UI/TransportBar/: TransportBar.cpp  TransportBar.h
src/UI/TutorialManager/: TutorialManagerComponent.cpp  TutorialManagerComponent.h  TutorialNodeComponent.h
tests/: CMakeLists.txt
